--- a/psi4/src/psi4/libscf_solver/CMakeLists.txt
+++ b/psi4/src/psi4/libscf_solver/CMakeLists.txt
@@ -26,7 +26,6 @@ if(TARGET ECPINT::ecpint)
     )
 endif()
 
-
 if(TARGET BrianQC::static_wrapper)
   target_compile_definitions(scf_solver
     PUBLIC
@@ -38,3 +37,13 @@ if(TARGET BrianQC::static_wrapper)
     )
 endif()
 
+if(TARGET OpenOrbitalOptimizer::OpenOrbitalOptimizer)
+  target_compile_definitions(scf_solver
+    PUBLIC
+      USING_OpenOrbitalOptimizer
+    )
+  target_link_libraries(scf_solver
+    PUBLIC
+      OpenOrbitalOptimizer::OpenOrbitalOptimizer
+    )
+endif()
