--- a/external/upstream/bse/CMakeLists.txt
+++ b/external/upstream/bse/CMakeLists.txt
@@ -1,7 +1,7 @@
 if(${ENABLE_bse})
     if(NOT (${CMAKE_DISABLE_FIND_PACKAGE_bse}))
         include(FindPythonModule)
-        find_python_module(basis_set_exchange ATLEAST 0.10.0 QUIET)  # 0.9 is fine
+        find_python_module(basis_set_exchange ATLEAST 0.9.0 QUIET)
     endif()
     
     if(${basis_set_exchange_FOUND})
@@ -22,14 +22,15 @@ if(${ENABLE_bse})
     
         file(TO_NATIVE_PATH "${STAGED_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}${PYMOD_INSTALL_LIBDIR}" _install_lib)
     
+        # See source note at qcmanybody/CMakeLists.txt
         ExternalProject_Add(bse_external
             BUILD_ALWAYS 1
-            URL https://github.com/MolSSI-BSE/basis_set_exchange/archive/v0.10.tar.gz
+            URL https://github.com/MolSSI-BSE/basis_set_exchange/archive/master.tar.gz
             CONFIGURE_COMMAND ""
             UPDATE_COMMAND ""
             BUILD_COMMAND ${Python_EXECUTABLE} setup.py build
             BUILD_IN_SOURCE 1
-            INSTALL_COMMAND ${Python_EXECUTABLE} setup.py install
+            INSTALL_COMMAND ${Python_EXECUTABLE} -m pip install git+https://github.com/MolSSI-BSE/basis_set_exchange.git@v0.10#egg=proj
                                                           --record=record.txt
                                                           --single-version-externally-managed
                                                           --install-lib=${_install_lib})
