--- a/external/upstream/optking/CMakeLists.txt
+++ b/external/upstream/optking/CMakeLists.txt
@@ -23,7 +23,8 @@ else()
 
     ExternalProject_Add(optking_external
         BUILD_ALWAYS 1
-        URL https://github.com/psi-rking/optking/archive/0.2.1.tar.gz
+        #URL https://github.com/psi-rking/optking/archive/0.2.1.tar.gz
+        URL https://github.com/psi-rking/optking/archive/bbea6b0.tar.gz  # works with py312
         CONFIGURE_COMMAND ""
         UPDATE_COMMAND ""
         BUILD_COMMAND ${Python_EXECUTABLE} setup.py build
