--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,11 +4,16 @@ repos:
     hooks:
       - id: check-case-conflict
       - id: check-merge-conflict
-  - repo: https://github.com/pre-commit/mirrors-yapf
-    rev: v0.27.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.7.0
     hooks:
-      - id: yapf
-  - repo: https://github.com/doublify/pre-commit-clang-format.git
-    rev: master
-    hooks:
-      - id: clang-format
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix, --preview]
+        exclude: "^(psi4/share/|psi4/driver/qcdb/|psi4/__init__.py|psi4/driver/__init__.py|samples/|tests/|doc/|devtools/|conda/)"
+      - id: ruff-format
+        exclude: "^(psi4/share/|psi4/driver/qcdb/|psi4/__init__.py|psi4/driver/__init__.py|samples/|tests/|doc/|devtools/|conda/)"
+# TODO: clang-format will be revived later on
+#  - repo: https://github.com/doublify/pre-commit-clang-format.git
+#    rev: master
+#    hooks:
+#      - id: clang-format
